tests/pod-with-existing-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-with-existing-zone-affinity
  annotations:
    automatic-zone-placement/fqdn: "example-db.example.com"
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        preference:
          matchExpressions:
          - key: topology.kubernetes.io/zone
            operator: In
            values:
            - eu-central-1b
  containers:
  - name: nginx
    image: nginx:latest
