tests/pod-without-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-without-affinity
  annotations:
    automatic-zone-placement: "example-db.example.com"
spec:
  containers:
  - name: nginx
    image: nginx:latest
