tests/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-automatic-zone-placement-policy
policies:
  - ../resources/kyverno_clusterpolicy.yaml
resources:
  - pod-without-affinity.yaml
  - pod-with-existing-affinity.yaml
variables: variables.yaml
results:
  - policy: automatic-zone-placement
    rule: automatic-zone-placement
    resources:
      - test-pod-without-affinity
    kind: Pod
    result: pass
  - policy: automatic-zone-placement
    rule: automatic-zone-placement
    resources:
      - test-pod-with-existing-zone-affinity
    kind: Pod
    result: skip
